| along with this program; if not, write to the Free Software               |
| Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA |
+---------------------------------------------------------------------------+

+---------------------------+
| Release Max v0.3.32-alpha |
+---------------------------+

2007-01-09  Maintenance Feature     Fixed #11 - Changes to database schema to improve MPE performance (Andrew)
2007-01-05  DAL         Feature     Fixed #10 - Improved DAL to use IN format SQL for performance (Andrew)
2006-12-19  Delivery    Bug         Fixed #1 - Iframe refresh was not working

/**
 * NOTE: The svn repositry was moved to a new server at this point
 *       Any ticket references below this point are held at:
 *       - https://museum.openads.org/trac/openads/
 */

2006-12-04  Delivery    Feature     Fixed #1017 - Allow fl.js file to be specified by full URL (Chris)
2006-12-04  Admin       Bug         Fixed #1016 - Duplicate document.context line in JS invocation (Chris)

+---------------------------+
| Release Max v0.3.31-alpha |
+---------------------------+

2006-11-24  Admin       Feature     Fixed #936 - Created the first version of the Channel Availability
                                    report (Andrew)
2006-11-23  Admin       Feature     Fixed #1001 - Add Openads Sync support, with built in product
                                    upgrades checker (Matteo)
2006-11-23  Admin       Bug         Fixed #977 - Issue with creating publisher after deleting old
                                    agencies/publishers (Matteo)
2006-11-22  Admin       Bug         Fixed #784 - Add a pragma-no-cache header to stats pages (Dawid)
2006-11-22  Admin       Feature     Fixed #696 - Put a pager on the conversion detail page (Dawid)
2006-11-15  Plugins     Feature     Merged in (previously proprietary) MS Excel output libraries (Andrew)
2006-11-14  General     Bug         Fixed #976 - MAX_AclReCompileAll() has rogue '$this' (Colin)