@@ -52,7 +52,7 @@ class MAX_Dal_Admin_Banner extends MAX_Dal_Common
     function getAllBannersUnderAgency($agency_id, $listorder, $orderdirection)
     {
         $conf = $GLOBALS['_MAX']['CONF'];
-        $query = "SELECT b.bannerid AS bannerid".
+        $query = "SELECT b.bannerid AS ad_id".
             ",b.campaignid AS campaignid".
             ",b.alt AS alt".
             ",b.description AS description".
@@ -217,10 +217,9 @@ class MAX_Dal_Admin_Banner extends MAX_Dal_Common
     function _rekeyBannersArray($flat_banners)
     {
         $banners = array();
-        foreach ($flat_banners as $row_banners) { 
-            if (isset($campaigns[$row_banners['campaignid']])) {
-                $banners[$row_banners['bannerid']] = $row_banners;
-            }
+        foreach ($flat_banners as $row_banners) {
+            $banners[$row_banners['ad_id']] = $row_banners;
+            unset($row_banners['ad_id']);
         }
         return $banners;
     }
