@@ -27,6 +27,7 @@
 | Release Max v0.3.32-alpha |
 +---------------------------+
 
+2007-01-15  Admin       Bug         Fixed #2 - All advertisers are shown as inactive (Chris)
 2007-01-09  Maintenance Feature     Fixed #11 - Changes to database schema to improve MPE performance (Andrew)
 2007-01-05  DAL         Feature     Fixed #10 - Improved DAL to use IN format SQL for performance (Andrew)
 2006-12-19  Delivery    Bug         Fixed #1 - Iframe refresh was not working
